// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should ExpensesSummary render correctly with 1 expense 1`] = `
<p>
  Viewing 
  1
   expense
  <Component />
   totaling 
  $0.00
   
</p>
`;

exports[`should ExpensesSummary render correctly with 2 expenses 1`] = `
<p>
  Viewing 
  2
   expense
  s
   totaling 
  $0.00
   
</p>
`;
